--- a/Weitianshi/pages/message/applyProject/applyProject.wxss
+++ b/Weitianshi/pages/message/applyProject/applyProject.wxss
@@ -83,10 +83,11 @@ page {
   line-height: 38rpx;
   text-align: left;
   margin-bottom: 32rpx;
-  /* width:1418rpx; */
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .allIndustry {
@@ -258,10 +259,12 @@ page {
   color: #666;
   line-height: 88rpx;
   text-align: left;
-  height: 88rpx;
-  white-space: nowrap;
+  /* height: 88rpx; */
   overflow: hidden;
   text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
   width: 670rpx;
   padding-left: 32rpx;
 }
@@ -316,7 +319,7 @@ page {
 
 .roundGroup {
   margin-bottom: none;
-    font-size: 26rpx;
+  font-size: 26rpx;
   color: #999;
   line-height: 26rpx;
   text-align: left;
@@ -534,6 +537,6 @@ page {
 }
 
 .aLine {
-  border-top: 1rpx solid #e6e6e6; 
-  margin:0 32rpx;
+  border-top: 1rpx solid #e6e6e6;
+  margin: 0 32rpx;
 }
