--- a/Weitianshi/pages/myProject/editProject/editProject.wxss
+++ b/Weitianshi/pages/myProject/editProject/editProject.wxss
@@ -257,10 +257,11 @@ page {
   width: 506rpx;
   background-color: white;
   margin-top: 206rpx;
-  margin-left: 64rpx;
+  margin-left: 79rpx;
   padding: 40rpx 32rpx 32rpx 32rpx;
   position: fixed;
   z-index: 99999999;
+  border-radius: 4rpx;
 }
 
 .modalTitle {
