--- a/Weitianshi/pages/register/companyInfo/companyInfo.wxml
+++ b/Weitianshi/pages/register/companyInfo/companyInfo.wxml
@@ -1,6 +1,6 @@
 <view id="companyInfo">
   <form>
-    <view class="flex title">为了获得更精准的匹配,请完善信息</view>
+    <view class="flex title">公司信息，有助于投资人或项目快速识别您的身份</view>
     <view id="company" class="flex">
       <input placeholder="公司" maxlength="40" value="{{company}}" bindblur="company" />
     </view>
