--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxml
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxml
@@ -151,6 +151,6 @@
 <template name="searchNothing">
   <view class="searchNothing" wx:if="{{empty.length == 0}}">
      <view class="searchLine"></view>
-    <view class="classname">暂时没有符合该条件的项目</view>
+    <view class="classname">暂时没有符合该条件的数据</view>
   </view>
 </template>
