--- a/Weitianshi/pages/discoverInvest/discoverInvest.wxml
+++ b/Weitianshi/pages/discoverInvest/discoverInvest.wxml
@@ -15,7 +15,7 @@
     <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore'>
       <view class="aBox"></view>
       <template is="searchNothing" data="{{empty:investorList}}"></template>
-      <block wx:for="{{faList}}" wx:key="{{faList}}">
+      <block wx:for="{{investorList}}" wx:key="{{investorList}}">
         <view class='investorCard'>
           <template is='InvestorCard' data='{{item}}'></template>
           <template is='cardBottom1' data='{{item}}'></template>
