--- a/Weitianshi/pages/myProject/publishProject/publishProject.wxml
+++ b/Weitianshi/pages/myProject/publishProject/publishProject.wxml
@@ -14,7 +14,7 @@
   </view>
   <view class="card">
     <view class="text">项目介绍*</view>
-    <input  placeholder="一句话介绍,30字以内." placeholder-style='color:#ccc' bindblur="bindTextAreaBlur" maxlength="40" value="{{describe}}" />
+    <input placeholder="一句话介绍,30字以内." placeholder-style='color:#ccc' bindblur="bindTextAreaBlur" maxlength="40" value="{{describe}}" />
   </view>
   <!--<view class="card">
     <view class="text">所属领域*</view>
@@ -102,14 +102,14 @@
     <view class="projectBoxContent flex">
       <view class="projectTitle">投后股份（%）</view>
       <view class="flex">
-          <input class="projectContentInput newBox" placeholder="请输入投后股权占比" placeholder-style="color:#ccc"  bindinput="projectFinance"/>
+        <input class="projectContentInput newBox" placeholder="请输入投后股权占比" placeholder-style="color:#ccc" bindinput="projectFinance" />
         <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
         <!-- <view class="personListContentAfter"></view> -->
       </view>
     </view>
   </view>
   <view class="userBox">
-    <view class="projectBoxContent flex noBorder"  bindtap="initPrivacy">
+    <view class="projectBoxContent flex noBorder" bindtap="initPrivacy">
       <view class="projectTitle">私密性设置</view>
       <view class="flex">
         <view class="projectContent">请选择</view>
@@ -123,24 +123,28 @@
   <image src="/img/icon-zhuyi@2x.png" class="tipsPic"></image>
   <view class="tipsContent">未经您的许可，项目数据绝对私密安全</view>
 </view>
-<view class="choiceBox flex" wx:if="{{group_id != 21&& group_id != 18 && group_id != 6}}">
-  <view class="content">需要Bp美化</view>
-  <switch  bindchange="switchChange1" class="switchTab" checked="{{service_ps_bp}}" />
+<view>
+  <view class="choiceBox flex" wx:if="{{!yesData}}">
+    <view class="content">需要Bp美化</view>
+    <switch bindchange="switchChange1" class="switchTab" checked="{{service_ps_bp}}" />
+  </view>
+  <view class="choiceBox flex" wx:if="{{!yesData}}">
+    <view class="content">需要融资顾问（FA）服务</view>
+    <switch bindchange="switchChange2" class="switchTab" checked="{{service_fa}}" />
+  </view>
 </view>
-<view class="choiceBox flex" wx:if="{{group_id != 21&& group_id != 18 && group_id != 6}}">
-  <view class="content">需要融资顾问（FA）服务</view>
-  <switch  bindchange="switchChange2" class="switchTab" checked="{{service_fa}}" />
-</view>
-<view class="choiceBox flex" wx:if="{{group_id == 21|| group_id == 18 || group_id == 6}}">
-  <view class="content">是否需要云投行（FA）合作</view>
-  <switch  bindchange="switchChange3" class="switchTab"  checked="{{service_yun}}"/>
+<view wx:if="{{yesData}}">
+  <view class="choiceBox flex">
+    <view class="content">是否需要云投行（FA）合作</view>
+    <switch bindchange="switchChange3" class="switchTab" checked="{{service_yun}}" />
+  </view>
 </view>
 <view class="question" wx:if="{{group_id != 21&& group_id != 18 && group_id != 6}}">
   <view class="questionWhy">Q：什么是融资顾问服务</view>
   <view class="answer">A：微天使平台会结合您的融资需求推荐最适合的FA，帮助您打磨 商业计划，梳理BP，引荐投资机构。（业务同学会通过您在平台 留下的联系方式与您沟通具体融资需求）
   </view>
 </view>
-<view class="question"  wx:if="{{group_id == 21|| group_id == 18 || group_id == 6}}">
+<view class="question" wx:if="{{group_id == 21|| group_id == 18 || group_id == 6}}">
   <view class="questionWhy">Q：什么是要云投行合作</view>
   <view class="answer">A：微天使平台将协助您寻找最合适的投资机构，并与合作伙伴共同协助推进您的项目融资。（业务同学会通过您在平台留下的联系方式与您沟通具体合作方式）
   </view>
@@ -157,7 +161,7 @@
   </view>
   <view class="contactModalBox">
     <image src="/img/img-saoyisao@2x.png" class="aPic"></image>
-   <view class="modalTitle">电脑打开,点击扫一扫</view>
+    <view class="modalTitle">电脑打开,点击扫一扫</view>
     <view class="modalTips">www.weitianshi.cn/qr</view>
     <view class="btn" bindtap="upLoadPc">扫一扫</view>
   </view>
