--- a/Weitianshi/utils/wxml/threeTab.wxml
+++ b/Weitianshi/utils/wxml/threeTab.wxml
@@ -5,7 +5,7 @@
     <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}} buyers-mapm" data-current="1" bindtap="swichNav">买家图谱</view>
     <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}} due-diligencem" data-current="2" bindtap="swichNav">一键尽调</view>
   </view>
-  <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:336px" bindchange="bindChange">
+  <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:385px" bindchange="bindChange">
     <!--项目详情  -->
     <swiper-item>
       <scroll-view scroll-y="true">
@@ -197,7 +197,7 @@
                   <label class="more" bindtap="allBrightPoint" wx:if="{{isChecked4 == true && textBeyond4}}" data-check="{{4}}">全部</label>
                   <label class="more" bindtap="noBrightPoint" wx:if="{{isChecked4== false && textBeyond4}}" data-check="{{4}}">收起</label>
                 </view>
-                <view class="investBox" wx:if="{{pro_history_financeList}}">
+                <view class="investBox" wx:if="{{pro_history_financeList.length !=0}}">
                 <view class="historyInvestTitle">历史融资</view>
                   <view class="invest" wx:for="{{pro_history_financeList}}" wx:if="{{index<2||moreInfoList == 3}}" wx:key="{{index}}">
                     <view class="investBoxContent flex" wx:if="{{pro_history_financeList.length != 0}}">
@@ -342,6 +342,7 @@
               </view>
             </view>
           </block>
+          <view style="height:32rpx;"></view>
           <template is="hasNothing" data="{{emptyNumber:investor2}}"></template>
         </view>
       </scroll-view>
