--- a/Weitianshi/pages/my/sharePage/sharePage.wxml
+++ b/Weitianshi/pages/my/sharePage/sharePage.wxml
@@ -34,7 +34,8 @@
   </view>-->
   </view>
   <view class="flex sharePageButton floatBtn">
-    <view class="myContacts  my-contactsm" bindtap="toContacts">创建我的名片</view>
+    <view class="myContacts  my-contactsm" bindtap="toContacts" wx:if="{{complete != 1}}">创建我的名片</view>
+    <view class="myContacts  my-contactsm" bindtap="toContactsMy" wx:if="{{complete == 1}}">打开我的名片</view>
     <view class="myContacts addPerson pushprojectm" bindtap="pushProject">推送项目</view>
     <view class="giveProject" wx:if="{{button_type == 1}}">已为人脉</view>
     <view class="addNetwork add-contactsm" bindtap="addNetwork" wx:if="{{button_type == 0||button_type==3 ||button_type == 4}}">保存名片</view>
