--- a/Weitianshi/pages/matchInvestor/matchInvestor.wxml
+++ b/Weitianshi/pages/matchInvestor/matchInvestor.wxml
@@ -67,7 +67,7 @@
       </view>
     </block>
     <!--内容为空的时候的样式  -->
-    <view class="emptyStyle" wx:if="{{myProject.length == 0}}">
+    <view class="emptyStyle" wx:if="{{myProject.length == 0||myProject}}">
       <view class="hasNothing">暂无数据，发布融资项目，可匹配投资人</view>
       <image src="{{imgUrls}}"></image>
     </view>
