--- a/Weitianshi/pages/search/search3/search3.wxml
+++ b/Weitianshi/pages/search/search3/search3.wxml
@@ -27,66 +27,72 @@
     </view>
   </block>
   <!--我的人脉列表  -->
-  <block wx:for="{{myList}}" wx:key="{{item.user_id}}" wx:if='{{myList}}'>
+  <!-- <block wx:for="{{myList}}" wx:key="{{item.user_id}}" wx:if='{{myList}}'>
     <view class="t-myContactsCard  contacts-detailm" data-id="{{item.user_id}}" bindtap="userDetail">
       <view class="user_info flex">
-        <view class="user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
-        <image class="user_pic" src="{{item.user_avatar_url}}" wx:if="{{item.user_avatar_url}}"></image>
+        <view class="user_text" wx:if="{{item.investor_avatar_text}}">{{item.investor_avatar_text}}</view>
+        <image class="user_pic" src="{{item.investor_logo_url}}" wx:if="{{item.investor_logo_url}}"></image>
         <view class="user_info_right">
           <view class="flex frame">
             <view class="name_flex flex">
-              <view class="user_name">{{item.user_real_name}}</view>
-              <view class="user_career">{{item.user_company_career}}</view>
-            </view>
-            <label class="telephoneLab telephonem" data-telephone="{{item.user_mobile}}" catchtap="telephone">
+              <view class="user_name">{{item.investor_name}}</view>
+              <view class="user_career">{{item.investor_career}}</view>
+            </view> -->
+            <!-- <label class="telephoneLab telephonem" data-telephone="{{item.user_mobile}}" catchtap="telephone">
               <image class="telephone" src="/img/icon-phone@3x.png"></image>
-            </label>
-          </view>
+            </label> -->
+          <!-- </view>
           <view class="user_company" wx:if="{{item.user_company_name !=''}}">{{item.user_company_name}}</view>
         </view>
       </view>
-      <view class="investor_info">
+      <view class="investor_info"> -->
 
         <!--投资领域-->
-        <view class="investor_industry_frame flex" wx:if="{{item.user_invest_industry !=''}}">
+        <!-- <view class="investor_industry_frame flex" wx:if="{{item.industry_tag !=''}}">
           <view class="investor_text">投资领域:</view>
           <view class="investor_right flex">
-            <block wx:for="{{item.user_invest_industry}}" wx:for-item="industry" wx:key="{{industry.industry_id}}">
+            <block wx:for="{{item.industry_tag}}" wx:for-item="industry" wx:key="{{industry.industry_id}}">
               <view class="industry" hidden="{{index>3}}">{{industry.industry_name}}</view>
             </block>
           </view>
-        </view>
+        </view> -->
 
         <!--投资轮次-->
-        <view class="investor_industry_frame flex" wx:if="{{item.user_invest_stage !=''}}">
+        <!-- <view class="investor_industry_frame flex" wx:if="{{item.stage_tag !=''}}">
           <view class="investor_text">投资轮次:</view>
           <view class="investor_right flex">
-            <block wx:for="{{item.user_invest_stage}}" wx:for-item="stage" wx:key="{{stage.stage_id}}">
+            <block wx:for="{{item.stage_tag}}" wx:for-item="stage" wx:key="{{stage.stage_id}}">
               <view class="stage">{{stage.stage_name}}</view>
             </block>
           </view>
-        </view>
+        </view> -->
 
         <!--拥有资源-->
-        <view class="investor_industry_frame flex" wx:if="{{item.user_resource_find !=''}}">
+        <!-- <view class="investor_industry_frame flex" wx:if="{{item.user_resource_find !=''}}">
           <view class="investor_text">寻求资源:</view>
           <view class="investor_right flex">
             <block wx:for="{{item.user_resource_find}}" wx:for-item="res_find" wx:key="{{res_find.resource_id}}">
               <view class="res_find">{{res_find.resource_name}}</view>
             </block>
           </view>
-        </view>
+        </view> -->
 
         <!--寻求资源-->
-        <view class="investor_industry_frame flex" wx:if="{{item.user_resource_give !=''}}">
+          <!-- <view class="investor_industry_frame flex" wx:if="{{item.user_resource_give !=''}}">
           <view class="investor_text">拥有资源:</view>
           <view class="investor_right flex">
             <block wx:for="{{item.user_resource_give}}" wx:for-item="res_give" wx:key="{{res_give.resource_id}}">
               <view class="res_give">{{res_give.resource_name}}</view>
             </block>
           </view>
-        </view>
-      </view>
+        </view> 
+       </view>
+    </view>  
+   </block >  -->
+  <block wx:for="{{myList}}" wx:key="{{item.user_id}}" wx:if='{{myList}}'>
+      <view class='investorCard'>
+      <template is='InvestorCard' data='{{item}}'></template>
+      <template is='cardBottom1' data='{{item,user_id}}'></template>
     </view>
   </block>
 </scroll-view>
