--- a/Weitianshi/pages/contactsActivty/topPlayer/topPlayer.wxml
+++ b/Weitianshi/pages/contactsActivty/topPlayer/topPlayer.wxml
@@ -6,7 +6,7 @@
   <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">战队</view>
 
 </view>
-<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:570px" bindchange="bindChange">
+<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:1140rpx" bindchange="bindChange">
   <!--个人排名  -->
   <swiper-item>
     <scroll-view scroll-y="true" scroll-top="{{scroll}}" bindscrolltolower="moreThing">
