--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -284,7 +284,7 @@
 <template name="projectList">
   <view class="weui-panel__bd" style="background:white;margin:16px">
     <view class="weui-media-box weui-media-box_text my_detail" data-id='{{myProject.project_id}}' data-index="{{index}}" bindtap="detail" data-id='{{myProject.case_id}}'>
-      <view class="weui-media-box__title weui-media-box__title_in-text" style="text-align:left;">{{myProject.pro_intro||myProject.case_name}}</view>
+      <view class="title" style="text-align:left;">{{myProject.pro_intro||myProject.case_name}}</view>
       <view class="sort flex">
         <block wx:for="{{myProject.pro_industry||myProject.industry}}" wx:for-item="sort" wx:key="*this">
           <view class="weui-media-box__desc" wx:if="{{index<4}}">
