--- a/Weitianshi/pages/my/investCase/investCase.wxss
+++ b/Weitianshi/pages/my/investCase/investCase.wxss
@@ -1,4 +1,16 @@
 /* pages/my/investCase/investCase.wxss */
+
+.weui-media-box__desc {
+  color: #999;
+  font-size: 13px;
+  line-height: 1.4;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+
 .weui-media-box__desc:last-child {
   border-right: none;
 }
@@ -6,17 +18,18 @@
 .edit {
   justify-content: flex-end;
 }
-.img_frame{
+
+.img_frame {
   align-items: baseline;
   justify-content: space-between;
 }
 
-.editIcon{
+.editIcon {
   width: 32rpx;
   height: 32rpx;
 }
 
-.tip{
+.tip {
   margin-right: 24rpx;
   font-size: 20rpx;
   color: #999;
@@ -26,4 +39,16 @@
   height: 26rpx;
   line-height: 26rpx;
   margin-top: 20rpx;
+}
+
+.weui-media-box {
+  padding: 15px;
+  position: relative;
+}
+
+.title {
+  font-size: 26rpx;
+  color: #333;
+  margin-bottom:24rpx;
+
 }
