--- a/Weitianshi/pages/my/sharePage/sharePage.wxml
+++ b/Weitianshi/pages/my/sharePage/sharePage.wxml
@@ -2,7 +2,7 @@
 <scroll-view id="my" scroll-y="true">
   <template is="topBlock"></template>
   <!--我的名片-->
-  <template is="userInfo" data="{{user:user,count:count,text:'收藏他',show:0,IdentificationShow:0,playTime:1}}"></template>
+  <template is="userInfo" data="{{user:user,count:count,text:'加他为人脉',show:0,IdentificationShow:0,playTime:1}}"></template>
   <view class="downBox">
     <!--个人描述-->
     <template is="userIntro" data="{{user:user}}"></template>
