--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -1,4 +1,4 @@
-<!--发布投资需求和资源需求的按钮·11111-->
+<!--发布投资需求和资源需求的按钮-->
 <template name="publish">
   <view wx:if="{{hasPublic==0}}">
     <view class="publish publish2 publish_find_project publish-investmentm" bindtap="{{jumpProject}}">
