--- a/Weitianshi/pages/message/potentialProject/potentialProject.wxml
+++ b/Weitianshi/pages/message/potentialProject/potentialProject.wxml
@@ -42,7 +42,7 @@
   </view>
   <view class="contactModalBox">
     <view class="modalTitle">联系项目方</view>
-    <textarea class="modalContent" placeholder="请简要描述您的约谈需求" bindinput="contentProject" />
+    <textarea class="modalContent" placeholder="请描述您的意向约谈时间，方式" bindinput="contentProject" />
     <view class="modalTips">微天使将为您联系项目方并安排约谈或添加FA哥微信：weitianshicn</view>
     <view class="btn" bindtap="yesBtn">确定</view>
   </view>
